API Authentication & documentation

--- a/src/ServiceWatchdog.Api/ServiceWatchdog.Api.csproj
+++ b/src/ServiceWatchdog.Api/ServiceWatchdog.Api.csproj
@@ -14,5 +14,6 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.4.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="5.5.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore.ReDoc" Version="5.5.1" />
   </ItemGroup>
 </Project>
