--- a/src/ServiceWatchdog.Api/appsettings.Development.json
+++ b/src/ServiceWatchdog.Api/appsettings.Development.json
@@ -10,5 +10,6 @@
   "PG_DATABASE": "watchdog",
   "PG_USERNAME": "watchdog",
   "PG_PASSWORD": "watchdog",
-  "PG_HOST": "localhost"
+  "PG_HOST": "localhost",
+  "API_KEY": "foo"
 }
