--- a/src/StatusWatchdog/ServiceWatchdog.csproj
+++ b/src/StatusWatchdog/ServiceWatchdog.csproj
@@ -1,19 +1,30 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.4">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.4" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.3" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.4.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="5.5.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore.ReDoc" Version="5.5.1" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.4">
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.4" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.3" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.1" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.4.1" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="5.5.1" />
+        <PackageReference Include="Swashbuckle.AspNetCore.ReDoc" Version="5.5.1" />
+    </ItemGroup>
+
+    <Target Name="NPM Deploy" BeforeTargets="BeforePublish">
+        <Exec WorkingDirectory="$(MSBuildProjectDirectory)/client-app" Command="npm install" ConsoleToMsBuild="true">
+            <Output TaskParameter="ConsoleOutput" PropertyName="OutputOfExec" />
+        </Exec>
+        <Exec WorkingDirectory="$(MSBuildProjectDirectory)/client-app" Command="npm run build" ConsoleToMsBuild="true">
+            <Output TaskParameter="ConsoleOutput" PropertyName="OutputOfExec" />
+        </Exec>
+        <Message Text="$(MSBuildProjectDirectory)/client-app -> $(MSBuildProjectDirectory)/wwwroot" Importance="High"></Message>
+    </Target>
+
 </Project>
