--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -1,11 +1,9 @@
-name: .NET Core
+name: Generate Docs
 
 on:
   workflow_dispatch:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  release:
+    types: [ published ]
 jobs:
   build:
     runs-on: ubuntu-latest
