--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,6 +3,9 @@ on:
   workflow_dispatch:
   release:
     types: [ published ]
+  push:
+    branches:
+      - master
 jobs:
   push_to_registry:
     name: Push Docker image to GitHub Packages
@@ -11,7 +14,9 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
       - name: Checkout submodules
-        uses: textbook/git-checkout-submodule-action@master
+        uses: srt32/git-actions@v0.0.3
+        with:
+          args: git submodule update --init --recursive
       - name: Push to GitHub Packages
         uses: docker/build-push-action@v1
         with:
