--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,9 +15,18 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 3.1.301
+      - name: Install dependencies
+        run: dotnet restore
+      - name: Build
+        run: dotnet publish -c Release --no-restore
       - name: Push to GitHub Packages
         uses: docker/build-push-action@v1
         with:
+          path: src/StatusWatchdog
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
